updated to allow regions and product types

--- a/templates/form.html
+++ b/templates/form.html
@@ -42,6 +42,18 @@
   </div>
 </div>
 
+<!-- select input-->
+<div class="control-group">
+  <label class="control-label" for="region">Region</label>
+  <div class="controls">
+    <select id="region" name="region" class='form-control'>
+	<option value="com">USA</value>
+	<option value="es">Spain</value>
+    </select>
+    <p class="help-block">USA is default</p>
+  </div>
+</div>
+
 <!-- Button -->
 <div class="control-group">
   <label class="control-label" for="submit"></label>
