--- a/templates/data.html
+++ b/templates/data.html
@@ -4,6 +4,7 @@
 {# dump(test) #}
 </pre>
 <h2>{{nicheName|capitalize }}</h2>
+Region: <b>{{region}}</b><p />
 Total listings: <span style='color:{{resultsColor}}'> {{ totalResults }}  &nbsp; <b> - 20 - 300 is good</b></span> <p />
 
 <table class='table table-striped table-bordered table-condensed table-hover'>
@@ -57,6 +58,9 @@ Avg Sales Rank: <span style='color:{{ rankColor }};font-weight:bold;'> {{ avgRan
 Avg Price: ${{ avgPrice|number_format(2) }} <p />
 Competition: <span style='color:{{resultsColor}}'> {{ totalResults }}  &nbsp; <b> - 20 - 500 is good</b></span>  <p />
 Apprx Sales (avg 30/days): {{ avgSales }}<p />
+Avg Pages: {{ avgPages }}<p />
+Max Pages: {{ maxPages }}<p />
+Min Pages: {{ minPages }} <p />
 
 <hr />
   <div class='btn-group'>
